元素相关修改，未测试

--- a/static/stylesheets/contents.less
+++ b/static/stylesheets/contents.less
@@ -443,7 +443,7 @@ div:hover>.tools.tools-right {
   border: 1px solid #555555;
   width: 156px;
   height: 156px;
-  background-image: url("/images/block.png");
+  background-image: url("/static/images/block.png");
   float: left;
   margin: 2px;
   padding: 2px;
