--- a/views/content_layout_add.html
+++ b/views/content_layout_add.html
@@ -83,7 +83,7 @@
       border: 1px solid #555555;
       width: 156px;
       height: 156px;
-      background-image: url("/images/block.png");
+      background-image: url("/static/images/block.png");
       float: left;
       margin: 2px;
       padding: 2px;
@@ -112,7 +112,7 @@
       border: 1px solid #555555;
       width: 100px;
       height: 100px;
-      background-image: url("/images/block.png");
+      background-image: url("/static/images/block.png");
       float: left;
       margin: 2px;
       padding: 2px;
@@ -390,7 +390,7 @@
                   </a>
                 </div>
                 <div class="thumb" id="addCase">
-                  <img style="width: 94px;height: 94px;" data-toggle="modal" href="#pickImg" src="/images/block.png">
+                  <img style="width: 94px;height: 94px;" data-toggle="modal" href="#pickImg" src="/static/images/block.png">
                 </div>
               </div>
               <div class="row" style="overflow-y:auto;height:460px;">
